--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
     width: 100vw;
     height: 100vh;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     background-color: hsl(var (--hue), 100%, 20%);
 }
 
@@ -93,3 +93,16 @@ body.wrong {
 .hide {
     display: none;
 }
+
+.timer {
+    background-color: lightgrey;
+    width: 300px;
+    border: 15px solid rgb(238, 162, 245);
+    padding: 2rem;
+    margin: 1rem;
+    top: 8px;
+    right: 2in;
+    justify-content: right;
+
+}
+
